trying to fix accesibility and color contrast issues

--- a/styles/index-small.css
+++ b/styles/index-small.css
@@ -155,6 +155,7 @@ button:hover {
 }
 
 .course-array p {
+    border: 7px solid var(--primary-color);
     background-color: var(--secondary-color);
     color: white;
     padding: 0.5rem;
@@ -166,7 +167,9 @@ button:hover {
 }
 
 .course-array p.complete {
-    background-color: var(--primary-color);
+    
+    background: white;
+    color: var(--secondary-color)
 }
 
 #credits {
